# speech-hypertuning

./: .gitignore  pyproject.toml
notebooks/: analyze_bs_vs_lr.ipynb  analyze_n_vs_hidden_size.ipynb  analyze_results.ipynb  avg_weights.ipynb  clean_checkpoints_memory.ipynb  create_splits.ipynb  explore_dataset.ipynb  models.ipynb
speech_hypertuning/configs/: create_splits.gin  default_parameters.gin  dict_dataset.gin  extract_upstream_embeddings.gin  imports  load_dataset.gin  load_embeddings.gin  load_wavs.gin  lora.gin  phase_1_lr_scheduling.gin  phase_2_lr_scheduling.gin  phase_3_lr_scheduling.gin  test.gin  train.gin  train_hf.gin  train_s3prl_superb_sid.gin
speech_hypertuning/configs/datasets/: voxceleb1.gin
speech_hypertuning/configs/experiments/: lr.gin
speech_hypertuning/models/: __init__.py  lora.py  lr_scheduling.py  models.py
speech_hypertuning/models/poolings/: __init__.py  attention_poolings.py  layer_pooling.py  summarymixing.py  time_pooling.py
speech_hypertuning/scripts/: alternative-attention-poolings.sh  audios_per_sid_vs_hidden_size.sh  batch_size_vs_learning_rate.sh  ce_vs_acc.sh  create_splits.sh  downstream_fixed.sh  eval_vs_no_eval.sh  experiment_lr.sh  full_finetuning.sh  hf_train.sh  layer-poolings.sh  pooling.sh  pooling_projector.sh  poolings_order.sh  precalculate_upstream_embeddings.sh  run.sh  self-attention-pooling.sh  speakers_vs_hidden_size.sh  test_full_vs_chunk.sh  upstream_embedding_normalization.sh
speech_hypertuning/tasks/: __init__.py
speech_hypertuning/tests/: test_models.py  test_pooling.py
(+24 files in other folders)
